# yew-tinkering-project

./: Cargo.toml  LICENSE  README.md  index.html
src/: main.rs
src/components/: footer.rs
src/routes/: mod.rs
src/routes/contact_manager/: main_content.rs  mod.rs  new_contact_dialog.rs  notes.rs  toolbar.rs
src/services/: mod.rs
src/types/: mod.rs  note.rs  user.rs
